error analysis,bib fixed and reformating done

--- a/documentation/final/approach.tex
+++ b/documentation/final/approach.tex
@@ -11,8 +11,8 @@ Basic framework is defined in Fig 1. The agent performs action($a$) on the envir
 %\begin{figure}%
 %\vspace*{\fill}
 \centering
-\includegraphics[scale=0.75,width=0.75\columnwidth]{reinforcement_framework.png}%
-\caption{ Neural Network}%
+\includegraphics[scale=0.25,width=0.25\columnwidth]{reinforcement_framework.png}%
+\caption{ Reinforcement Learning Framework}%
 \label{fig:Visualization}%
 \end{figure}
 %\vfill}
@@ -76,8 +76,8 @@ We see that the target depends on the current network. A neural network works as
 %\begin{figure}%
 %\vspace*{\fill}
 \centering
-\includegraphics[scale=0.75,width=0.75\columnwidth]{figures/NN.png}%
-\caption{ Neural Network}%
+\includegraphics[scale=0.35,width=0.35\columnwidth]{figures/NN.png}%
+\caption{ DQN with two layers used to model the agent}%
 \label{fig:Visualization}%
 \end{figure}
 %\vfill}
