--- a/documentation/final/infrastructure.tex
+++ b/documentation/final/infrastructure.tex
@@ -1,16 +1,8 @@
 \section{Infrastructure}
 
-\begin{figure}[!ht]
-%\begin{figure}%
-%\vspace*{\fill}
-\centering
-\includegraphics[scale=0.75,width=0.75\columnwidth]{figures/game_env.png}%
-\caption{ Game Environment}%
-\label{fig:Visualization}%
-\end{figure}
-%\vfill}
 
-We have used the OpenAI gym library to train our agent. Although some insights are provided in Box2D Lunar Lander on the OpenAI website, thorough exploration of actions, state space, environment etc. was done before starting to solve the problem. Following is the description:
+
+We have used the OpenAI gym \citep{openai} library to train our agent. Although some insights are provided in Box2D Lunar Lander on the OpenAI website, thorough exploration of actions, state space, environment etc. was done before starting to solve the problem. Following is the description:
 
 \subsection{Actions}
 In this game, four discrete actions are available to the playing agent at any time frame: 
