--- a/documentation/final/biblio.bib
+++ b/documentation/final/biblio.bib
@@ -10,6 +10,12 @@ title={https://github.com/openai/gym/wiki/Leaderboard\#lunarlander-v2}
 title={https://allan.reyes.sh/projects/gt-rl-lunar-lander/}
 }
 
+@article{Dueling_Diagram,
+title={https://drive.google.com/file/d/0BxXI_RttTZAhVUhpbDhiSUFFNjg/view}
+}
+
+
+
 @article{PrioritizedReplay,
   author    = {Tom Schaul and
                John Quan and
