--- a/documentation/final/experiments.tex
+++ b/documentation/final/experiments.tex
@@ -148,7 +148,10 @@ All aforementioned models are evaluated for 100 episodes for a fixed weights. \\
 %\vspace*{\fill}
 \centering
 \includegraphics[scale=0.50,width=0.50\columnwidth]{figures/Picture2.png}%
-\caption{ Evaluating Performance of different DQN Networks}%
+\includegraphics[scale=0.50,width=0.50\columnwidth]{figures/Cartpolev1.png}%
+%\caption{ Agent learning CartPole Game}%
+
+\caption{ Evaluating Performance of different DQN Networks and Agent learning CartPole-v1 Game}%
 \label{fig:Different DQN Performance}%
 \end{figure}
 %\vfill}
@@ -156,12 +159,3 @@ All aforementioned models are evaluated for 100 episodes for a fixed weights. \\
 \subsection{ Agent on other Environments}
 We used the Agent to train on "CartPole-v1" game environment and were able to achieve good results. Our AI agent successfully learnt the game and consecutively won it. This proves the generality of the algorithm.
 
-\begin{figure}[!ht]
-%\begin{figure}%
-%\vspace*{\fill}
-\centering
-\includegraphics[scale=0.50,width=0.50\columnwidth]{figures/Cartpolev1.png}%
-\caption{ Agent learning CartPole Game}%
-\label{fig:Visualization}%
-\end{figure}
-%\vfill}
