--- a/documentation/final/codalab.tex
+++ b/documentation/final/codalab.tex
@@ -3,7 +3,15 @@
 
 https://worksheets.codalab.org/worksheets/0x1e3fc24cfa0d4ff3b492d0f47b6e0887/
  \\
-command to run \\
+Command to run :\\
 
-cl run :brain.py :hyperparameters.py :main.py :agent.py :environment.py :memory.py initial_weights:0xc8fff4 'python3 main.py --should_learn=False --agent=Dueling --initial_weights=initial_weights' -n sort-run --request-docker-image prabhjotrai/openai-gym:v1 \\
-FIX ME Verify this once  \\
+\begin{verbatim}
+cl run :brain.py :hyperparameters.py :main.py :agent.py :environment.py :memory.py  \
+\end{verbatim}
+\begin{verbatim}
+initial_weights:0xc8fff4 'python3 main.py --should_learn=False --agent=Dueling \
+\end{verbatim}
+
+\begin{verbatim}
+--initial_weights=initial_weights' -n sort-run --request-docker-image prabhjotrai/openai-gym:v1
+\end{verbatim}
