--- a/documentation/final/final_abhishek.tex
+++ b/documentation/final/final_abhishek.tex
@@ -59,5 +59,19 @@ amssymb,graphicx,url,listings,color,hyperref,floatrow,natbib,pdfpages}
 %\newpage
 %%\input{contribution}
 
+\section{Appendix}
+\subsection{Implementation choices}
+
+The choice of state was based on the actual configuration of the lunar lander, and we learnt weights for each feature in the state. Another choice could have been training on image data, feeding images per episode and learning on gained rewards. Since this would have been computationally expensive, we chose the former approach to explicit definition of state space and learning it's weights. \\
+
+For running different algorithms, we created separate classes so that the code is not only modularized, but can also be run easily on different openai environments, learning algorithms can be easily changed etc. Here's a quick description of different classes:
+
+\begin{enumerate}
+\item \textbf{Brain:} Class which contains keras models, updates the weights through train function and performs prediction based on learnt weights. 
+\item \textbf{Memory:} Class which appends observations until maximum memory length and samples based on given batch size hyperparameter
+\item \textbf{Agent:} Our agent class which explores and exploits based on fixed hyperparameters(gamma, epsilon max, epsilon min and decay) and passed arguments. This is also the class where we are performing the replay action and training the agent's brain instance. It also contains another instance of memory class which is used in replay while sampling.
+\item \textbf{Environment:} Class which runs the episode on given agent and asks the agent to observe and replay whenever the agent is trying to learn on episodes. It returns the information on how much reward was observed on each episode and for how long each episode ran
+\end{enumerate}
+
 \end{document}
 
